domains/auth/workloads/ui/infra/overlays/prod-eu/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ui
spec:
  template:
    spec:
      containers:
        - name: ui
